# psynder

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  vcpkg.json
engine/asset/: CMakeLists.txt  Codecs.cpp  Codecs.h  Formats.h  LmpakFormat.h  LmpakWriter.cpp  LmpakWriter.h  Precook.h  Texture.cpp  Texture.h  Vault.h  Vfs.cpp  Vfs.h  VfsInternal.h
engine/core/: AppArgs.cpp  AppArgs.h  BuildMeta.h  CMakeLists.txt  Diag.cpp  Diag.h  HashHelpers.h  Log.cpp  Log.h  Tracy.h  Types.h
engine/core/alloc/: Allocator.cpp  Allocator.h  FlightRecorder.h  FrameAllocGuard.cpp  FrameAllocGuard.h  Heatmap.h
engine/core/console/: Completion.cpp  Completion.h  Console.cpp  Console.h
engine/core/hardware/: CpuFeatures.cpp  CpuFeatures.h
engine/editor/: CMakeLists.txt
engine/editor/core/: Brush.h  BrushApi.cpp  CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Constraints.h  ConstraintsViz.h  ConstraintsVizApi.cpp  Editor.h  EditorState.cpp  EditorState.h  EntityOps.cpp  EntityOps.h  HotKey.cpp  HotKey.h  Modes.cpp  Physgun.h  PhysgunApi.cpp  SampleHook.h  SaveLoadApi.cpp  Sculpt.h  SculptApi.cpp  Selection.cpp  Selection.h  Serialization.h  Undo.h  ViewportGizmo.cpp  ViewportGizmo.h  WebPanels.cpp  WebPanels.h
engine/editor/ipc/: CMakeLists.txt  Ipc.h  Server.cpp  protocol.psy
engine/editor/play/: CMakeLists.txt  CharacterPeek.cpp  CharacterPeek.h  PlayComponents.h  PlayRuntime.cpp  PlayRuntime.h
engine/editor/render/: CMakeLists.txt  EditorRender.cpp  EditorRender.h
engine/editor/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
engine/editor/world/: CMakeLists.txt  LevelSource.cpp  LevelSource.h
engine/net/: Aoi.cpp  Aoi.h  CMakeLists.txt  Frame.cpp  Frame.h  HostImpl.cpp  HostImpl.h  Jitter.h  Lobby.cpp  Lobby.h  Lockstep.cpp  Lockstep.h  Loopback.cpp  Loopback.h  Matchmaking.cpp  Matchmaking.h  Net.cpp  Net.h  Prediction.cpp  Prediction.h  Reliability.cpp  Reliability.h  Replication.cpp  Replication.h  Snapshot.cpp  Snapshot.h  UdpSocket.cpp  UdpSocket.h
engine/platform/: App.h  CMakeLists.txt  Platform.cpp  Platform.h  RuntimeConfig.cpp  RuntimeConfig.h
engine/platform/linux/: CMakeLists.txt  EvdevInput.cpp  LinuxAudio.cpp  LinuxAudioRoute.h  LinuxKeymap.h  LinuxPlatform.cpp  LinuxPlatform_internal.h  WaylandWindow.cpp  X11Window.cpp
engine/platform/macos/: CMakeLists.txt  MacPlatform.cpp  MacPlatform.mm  MacPlatformFs.cpp  MacPlatform_internal.h
engine/platform/win32/: CMakeLists.txt  Win32Audio.cpp  Win32Audio.h  Win32Common.h  Win32Ffb.cpp  Win32Ffb.h  Win32Input.cpp  (+7 more)
engine/render/: CMakeLists.txt  Color.h  EntityHelpers.h  FrameStats.h  Framebuffer.h  Geometry.h  GeometryTools.h  Image.h  Material.h  MaterialBatcher.h  PngWriter.h  RenderingSystem.h  SceneRenderer.h  Texture.h  TextureGenerators.cpp  TextureGenerators.h
engine/script/: CMakeLists.txt  Script.h  Vm.cpp
engine/ui/: CMakeLists.txt
engine/world/: CMakeLists.txt
games/: CMakeLists.txt
games/df_demo/: CMakeLists.txt  main.cpp
games/duke_demo/: CMakeLists.txt  main.cpp
games/mp_demo/: CMakeLists.txt  main.cpp
games/racer_demo/: CMakeLists.txt  main.cpp
games/shooter_demo/: CMakeLists.txt  RagdollFx.cpp  RagdollFx.h  main.cpp
player/: CMakeLists.txt  main.cpp
samples/: CMakeLists.txt
samples/00_clear/: CMakeLists.txt  main.cpp
samples/01_triangle/: CMakeLists.txt  main.cpp
samples/02_textured_quad/: CMakeLists.txt  main.cpp
samples/03_quake_room/: CMakeLists.txt  main.cpp
samples/04_nfs_track/: CMakeLists.txt  main.cpp
samples/05_hybrid_night/: CMakeLists.txt  main.cpp
samples/05_rt_shadow_packets/: CMakeLists.txt  main.cpp
samples/06_tactical_map/: CMakeLists.txt  main.cpp
samples/07_phys_stacks/: CMakeLists.txt  main.cpp
samples/08_phys_constraints/: CMakeLists.txt  main.cpp
samples/09_char_playground/: CMakeLists.txt  main.cpp
samples/10_shape_sandbox/: CMakeLists.txt  main.cpp
samples/11_rt_spheres/: CMakeLists.txt  main.cpp
samples/12_rt_showcase/: CMakeLists.txt  main.cpp
samples/13_rt_quake/: CMakeLists.txt  main.cpp
samples/14_lightmap_quake/: CMakeLists.txt  main.cpp
samples/common/: CMakeLists.txt  CharacterController.h  Lighting.h  MeshWinding.h  PngWriter.h
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  ecs_query.cpp  math_hotpath.cpp  math_logic_kernel.cpp  physics_integrate.cpp  physics_particles.cpp  physics_solver.cpp  physics_vehicle.cpp  raster_tile.cpp  render_hot.cpp  runner.cpp  simd_throughput.cpp
tests/golden/: CMakeLists.txt  image_diff.h  runner.cpp
tests/unit/: CMakeLists.txt  ai_nav_alloc.cpp  ai_nav_build.cpp  ai_squad.cpp  ai_systems.cpp  asset_codecs.cpp  asset_vfs.cpp  asset_watcher.cpp  audio_chiptune.cpp  audio_doppler.cpp  audio_fdn_mod.cpp  audio_hrir_database.cpp  audio_hrtf.cpp  audio_mixer.cpp  audio_partitioned_conv.cpp  audio_voices.cpp  bsp_lightmap.cpp  combat_audio.cpp  core_alloc.cpp  core_app_args.cpp  core_completion.cpp  core_console.cpp  core_flight_recorder.cpp  core_hardware.cpp  core_hash_helpers.cpp  core_heatmap.cpp  core_log.cpp  core_tracy.cpp  editor_authored_indoor_level.cpp  editor_authored_level.cpp  editor_authored_racer_level.cpp  editor_core_brush_csg.cpp  editor_core_constraints_viz.cpp  editor_core_hotkey.cpp  editor_core_physgun.cpp  editor_core_save_load.cpp  editor_core_sculpt.cpp  editor_core_undo.cpp  editor_fps_authoring_smoke.cpp  editor_ipc_delta.cpp  (+151 more)
tools/: CMakeLists.txt  scene_inspect.py
tools/dmonte_pt/: CMakeLists.txt
tools/lm_bake/: Bake.cpp  Bake.h  CMakeLists.txt  main.cpp
tools/lm_cook/: CMakeLists.txt  Cook.cpp  Cook.h  CookFormats.cpp  CookFormats.h  SourceParsers.cpp  SourceParsers.h  main.cpp
tools/lm_mapimport/: CMakeLists.txt  CurveBrush.cpp  MapImport.cpp  MapImport.h  main.cpp
tools/lm_pak/: CMakeLists.txt  Lmpak.cpp  Lmpak.h  LmpakFixturePaths.h.in  main.cpp
tools/lm_qbsp/: CMakeLists.txt  Qbsp.cpp  Qbsp.h  main.cpp
tools/scene_cook/: BehaviorProgram.h  CMakeLists.txt  SceneCook.cpp  SceneCook.h  main.cpp
(+341 files in other folders)
