# SPDX-License-Identifier: MIT
# Samples — one mini-program per milestone demo (§13).
add_subdirectory(common)
add_subdirectory(00_clear)
add_subdirectory(01_triangle)
add_subdirectory(02_textured_quad)
add_subdirectory(03_quake_room)
add_subdirectory(04_nfs_track)
add_subdirectory(05_hybrid_night)
add_subdirectory(06_tactical_map)
add_subdirectory(07_phys_stacks)
add_subdirectory(08_phys_constraints)
add_subdirectory(12_rt_showcase)
add_subdirectory(13_rt_quake)
